--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Blake2b (64-bit version) in pure Javascript",
   "main": "index.js",
   "dependencies": {
-    "blake2b-wasm": "git+https://https://github.com/mafintosh/blake2b-wasm.git",
+    "blake2b-wasm": "git+https://github.com/Miguel974/blake2b-wasm.git",
     "nanoassert": "^1.0.0"
   },
   "devDependencies": {
